--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Login"></activity>
+        <activity android:name=".AddRecords"></activity>
+        <activity
+            android:name=".Firestore"
+            android:label="@string/title_activity_firestore"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Login" />
         <activity android:name=".Register" />
         <activity android:name=".MainActivity">
             <intent-filter>
